Add scan qr code auth and session creation, TODO in validation!
